k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # annotations are additional configuration options
    # telling kubernetes that the ingress controller needs to be created bases of the nginx project
    kubernetes.io/ingress.class: nginx
    # to address certain 4040 erros in local and google cloud
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # configure how the actual copy of nginx behaves
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # redirecting traffic to the UI (the web page known as the client for this project)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
          - path: /api/?(.*) # redirecting traffic that starts with /api to the server object in kubernetes
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
